--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,10 @@
-# Ethereum RPC URL - replace with your node URL
 RPC_URL=http://localhost:8545
-
-# EpochManager contract address - replace with actual deployed address
 EPOCH_MANAGER_ADDRESS=0x1234567890123456789012345678901234567890
-
-# Private key of the account that owns the EpochManager contract
-# Remove the 0x prefix
 PRIVATE_KEY=your_private_key_here
-
-# Polling interval in seconds (how often to check for epoch transitions)
 POLLING_INTERVAL=30
-
-# CollectionsVault contract addresses (comma-separated) - optional for DataCollector testing
 # COLLECTIONS_VAULT_ADDRESSES=0x1234567890123456789012345678901234567890,0x0987654321098765432109876543210987654321
+SUBSIDIZER_ADDR=
+SUBSIDY_TOKEN_ADDR=
+SUBSIDY_MIN_AMOUNT=
+SUBSIDY_BATCH_SIZE=
+SUBSIDY_PAYOUT_GASTIP=
