feat(gql): add comprehensive GraphQL types for collections, epochs, and user participation
- Introduced new types for collections, epochs, and related metrics in gql/types.go.
- Defined structures for collections, collection participations, epoch management, and subsidy distributions.
- Added constants for weight functions, collection types, and epoch statuses.

feat(collection): implement collection service for managing collection data

- Created a new service for handling collection operations in service/collection/service.go.
- Implemented methods to fetch collection configurations, participants, and calculate metrics.
- Added logging for key operations and metrics calculations.
- Included mock responses for collection configurations and active collections.

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,34 @@
-RPC_URL=http://localhost:8545
-EPOCH_MANAGER_ADDRESS=0x1234567890123456789012345678901234567890
+# Ethereum Configuration
+RPC_HTTP_URL=http://localhost:8545
+RPC_WS_URL=ws://localhost:8545
 PRIVATE_KEY=your_private_key_here
+CHAIN_ID=1
+
+# Contract Addresses
+EPOCH_MANAGER_ADDR=0x1234567890123456789012345678901234567890
+VAULT_ADDR=0x1234567890123456789012345678901234567890
+COLLECTION_REGISTRY_ADDR=0x1234567890123456789012345678901234567890
+SUBSIDIZER_ADDR=0x1234567890123456789012345678901234567890
+SUBSIDY_TOKEN_ADDR=0x1234567890123456789012345678901234567890
+
+# Server Configuration
+HTTP_PORT=8080
+ADMIN_TOKEN=your_admin_token_here
+SUBGRAPH_URL=http://localhost:8000/subgraphs/name/lend-fam/rewards
+
+# Processing Configuration
 POLLING_INTERVAL=30
+ENABLE_MERKLE_DISTRIBUTION=true
+BATCH_PROCESSING_SIZE=100
+ANALYTICS_RETENTION_DAYS=90
+
+# Subsidy Configuration
+SUBSIDY_MIN_AMOUNT=1000000000000000000
+SUBSIDY_BATCH_SIZE=100
+SUBSIDY_PAYOUT_GASTIP=2000000000
+MERKLE_TREE_DEPTH=20
+MAX_CLAIMS_PER_BATCH=50
+CLAIM_EXPIRATION_BLOCKS=100800
+
+# Optional - Vault addresses for testing
 # COLLECTIONS_VAULT_ADDRESSES=0x1234567890123456789012345678901234567890,0x0987654321098765432109876543210987654321
-SUBSIDIZER_ADDR=
-SUBSIDY_TOKEN_ADDR=
-SUBSIDY_MIN_AMOUNT=
-SUBSIDY_BATCH_SIZE=
-SUBSIDY_PAYOUT_GASTIP=
